# Support-Ticket-Dashboard

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_tickets.py
backend/app/: config.py  crud.py  db.py  exceptions.py  main.py  models.py  schemas.py  security.py
backend/app/api/: auth.py  tickets.py
backend/tests/: conftest.py  test_auth_api.py  test_tickets_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: auth.ts  client.ts  tickets.ts
frontend/src/components/: CreateTicketDialog.tsx  FilterBar.tsx  PriorityChip.tsx  ProtectedRoute.tsx  SearchBar.tsx  StatusSelect.tsx  TicketDetailCard.tsx  TicketDetailDrawer.tsx  TicketForm.tsx  TicketTable.tsx
frontend/src/components/kanban/: KanbanBoard.tsx  KanbanColumn.tsx  TicketCard.tsx  TicketCardContent.tsx
frontend/src/components/layout/: AppShell.tsx  FeedbackSnackbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCreateTicket.ts  useTicket.ts  useTickets.ts  useUpdateTicketStatus.ts
frontend/src/pages/: KanbanBoardPage.tsx  LoginPage.tsx  SignupPage.tsx  TicketDetailPage.tsx  TicketListPage.tsx
frontend/src/test/: SignupPage.test.tsx  TicketForm.test.tsx  TicketTable.test.tsx  setup.ts
frontend/src/types/: auth.ts  ticket.ts
frontend/src/utils/: avatar.ts  formatTicketId.ts  priorityColor.ts
