[project]
name = "aurexillion-ticket-backend"
version = "0.1.0"
description = "Support Ticket Dashboard backend (FastAPI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (==0.115.6)",
    "uvicorn[standard] (==0.32.1)",
    "sqlalchemy[asyncio] (==2.0.36)",
    "greenlet (==3.5.3)",
    "asyncpg (==0.30.0)",
    "alembic (==1.14.0)",
    "pydantic (==2.10.3)",
    "pydantic-settings (==2.7.0)",
    "email-validator (==2.2.0)",
    "bcrypt (==4.2.1)",
    "pyjwt (==2.10.1)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.4"
pytest-asyncio = "==0.24.0"
httpx = "==0.28.1"
aiosqlite = "==0.20.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
